Multiple files spacing issue updated.

--- a/wp-content/themes/blueox/assets/css/custom.css
+++ b/wp-content/themes/blueox/assets/css/custom.css
@@ -16,7 +16,7 @@
 
 /* Text & Fonts */
 .text-blue {
-    color: #1b3d80 !important;
+    color: #173e5e !important;
 }
 a.text-blue:hover {
     color: #404040 !important;
@@ -92,9 +92,9 @@ b, strong {
     font-family: 'Gotham-Medium', sans-serif;
     font-weight: 600;
     padding: 15px 25px;
-    border: 2px solid #1b3d80;
+    border: 2px solid #173e5e;
     width: auto;
-    background-color: #1b3d80;
+    background-color: #173e5e;
     transition: all 300ms ease-in-out;
 }
 .btn-blue:hover,
@@ -103,12 +103,12 @@ b, strong {
 .nav-next a:hover,
 .nav-previous a:focus,
 .nav-next a:focus {
-    color: #1b3d80 !important;
+    color: #173e5e !important;
     text-decoration: none;
     background-color: #fff;
 }
 .btn-white {
-    color: #1b3d80;
+    color: #173e5e;
     font-family: 'Gotham-Medium', sans-serif;
     font-weight: 600;
     padding: 15px 25px;
@@ -121,7 +121,7 @@ b, strong {
 .btn-white:focus {
     color: #fff;
     text-decoration: none;
-    background-color: #1b3d80;
+    background-color: #173e5e;
 }
 .btn-gray {
     color: #fff;
@@ -169,15 +169,15 @@ b, strong {
 .btn-clear--white:focus {
     color: #fff;
     text-decoration: none;
-    background-color: #1b3d80;
+    background-color: #173e5e;
 }
 .btn-clear--blue {
-    color: #1b3d80;
+    color: #173e5e;
     font-family: 'Gotham-Medium', sans-serif;
     font-weight: 600;
     /* padding: 15px 25px; Rajashekar*/
     padding: 10px 10px;
-    border: 2px solid #1b3d80;
+    border: 2px solid #173e5e;
     width: auto;
     background-color: transparent;
     transition: all 300ms ease-in-out;
@@ -186,7 +186,7 @@ b, strong {
 .btn-clear--blue:focus {
     color: #fff;
     text-decoration: none;
-    background-color: #1b3d80;
+    background-color: #173e5e;
 }
 .btn-clear--gray {
     color: #404040;
@@ -370,7 +370,7 @@ ul.eventCalendar li div {
     }
     .baseplates .selectize-input > input::placeholder,
     .baseplates .product-search-field::placeholder {
-        color: #1b3d80;
+        color: #173e5e;
         font-weight: light;
         font-size: 14px !important;
         font-family: 'Lato', sans-serif !important;
@@ -385,13 +385,13 @@ ul.eventCalendar li div {
     }
     .baseplates .selectize-input,
     .baseplates .product-search-field {
-        color: #1b3d80;
-        border: 2px solid #1b3d80;
+        color: #173e5e;
+        border: 2px solid #173e5e;
         text-shadow: none;
     }
     .baseplates .selectize-input::after {
         content: "\f078" !important;
-        color: #1b3d80 !important;
+        color: #173e5e !important;
         opacity: 1 !important;
         width: 25px !important;
         height: 25px !important;
@@ -428,7 +428,7 @@ ul.eventCalendar li div {
 /* Blog */
 .jumbotron {
     border-radius: 0;
-    background-color: #1b3d80 !important;
+    background-color: #173e5e !important;
 }
 .jumbotron-heading {
     color: #fff;
@@ -517,25 +517,25 @@ ul.eventCalendar li div {
 /* Plugin Override */
 .main-back-to-top {
     color: #fff !important;
-    background-color: #1b3d80 !important;
-    border: 2px solid #1b3d80;
+    background-color: #173e5e !important;
+    border: 2px solid #173e5e;
     transition: all 300ms ease-in-out;
 }
 
 .main-back-to-top:hover {
-    color: #1b3d80 !important;
+    color: #173e5e !important;
     background-color: #fff !important;
-    border: 2px solid #1b3d80;
+    border: 2px solid #173e5e;
     text-decoration: none;
 }
 
 /* Edited by Ayushi */
 .tax-product_cat .btn-clear--blue {
-    color: #1b3d80;
+    color: #173e5e;
     font-family: 'Gotham-Medium', sans-serif;
     font-weight: normal;
     padding: 7px 44px;
-    border: 2px solid #1b3d80;
+    border: 2px solid #173e5e;
     width: auto;
     background-color: transparent;
     transition: all 300ms ease-in-out;
@@ -557,6 +557,26 @@ ul.eventCalendar li div {
 }
 /* End By Ayushi on 5/3/2020 */
 
+#top-menu li.dealer-link-top a {
+    background: #173e5e;
+    color: #fff;
+    font-family: 'Gotham-Black',sans-serif;
+    font-weight: 700;
+    font-size: 13px;
+}
+
+.custom-logo {
+    height: 70px !important;
+}
+.store-locator__infobox .infobox__marker {
+    background-color: #173e5e !important;
+    border: 3px solid #173e5e !important;
+    color: #fff !important;
+}
+
+ul.products li.product .woocommerce-loop-product__title {
+    color: #173e5e;
+}
 
 /* Media */
 @media (min-width: 576px) {
